[package]
name = "breakout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.11", features=["dynamic_linking"]}
bevy-inspector-egui = "0.19"
bevy_iced = "0.4"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Bevy and wgpu need resolver version 2 with Cargo workspaces
[workspace]
resolver = "2"
